@@ -743,6 +743,7 @@ tui_handle_resize_during_io (int original_ch, int for_completion)
     {
       tui_resize_all ();
       tui_refresh_all_win ();
+      tui_update_gdb_sizes ();
       tui_set_win_resized_to (FALSE);
       if (!for_completion)
 	{
