@@ -1,5 +1,12 @@
 2015-02-11  Patrick Palka  <patrick@parcs.ath.cx>
 
+	* tui/tui-io.c (tui_handle_resize_during_io): Call
+	tui_update_gdb_sizes() after resizing the screen.
+	* tui/tui.c (tui_enable): Resize the terminal before
+	calling tui_update_gdb_sizes().
+
+2015-02-11  Patrick Palka  <patrick@parcs.ath.cx>
+
 	* tui/tui-io.c (tui_getc): Move cursor to the end of the command
 	line before printing a newline.
 
